fixed flex wrap

--- a/src/components/UI/PlayersGroupCard.css
+++ b/src/components/UI/PlayersGroupCard.css
@@ -1,9 +1,14 @@
 .players-card {
   display: flex;
+  flex-wrap: wrap;
   background-color: gray;
-  width: 95%;
   margin-left: auto;
   margin-right: auto;
   border-radius: 16px;
   padding: 10px;
+  justify-content: center;
+}
+
+button {
+  height: fit-content;
 }
